@@ -67,7 +67,7 @@ int TFB_InitGraphics (int driver, int flags, int width, int height);
 int TFB_ReInitGraphics (int driver, int flags, int width, int height);
 void TFB_UninitGraphics (void);
 void TFB_ProcessEvents (void);
-void TFB_SetGamma (float gamma);
+bool TFB_SetGamma (float gamma);
 void TFB_UploadTransitionScreen (void);
 // This function should not be called directly
 void TFB_SwapBuffers (int force_full_redraw);
